Support for Tabbed Window mode (2154)